Bug 571946 - Let nsICSSRule::GetType return the type as a PRInt32 type instead of taking an outparam for that. r=bz