layout/base/nsPresContext.cpp
@@ -1685,14 +1685,8 @@ static void
 InsertFontFaceRule(nsCSSFontFaceRule *aRule, gfxUserFontSet* aFontSet,
                    PRUint8 aSheetType)
 {
-#ifdef DEBUG
-  {
-    PRInt32 type;
-    NS_ABORT_IF_FALSE(NS_SUCCEEDED(aRule->GetType(type)) 
-                      && type == nsICSSRule::FONT_FACE_RULE, 
-                      "InsertFontFaceRule passed a non-fontface CSS rule");
-  }
-#endif
+  NS_ABORT_IF_FALSE(aRule->GetType() == nsICSSRule::FONT_FACE_RULE,
+                    "InsertFontFaceRule passed a non-fontface CSS rule");
 
   // aRule->List();
 
