layout/style/nsCSSStyleSheet.cpp
@@ -814,8 +814,7 @@ struct ChildSheetListBuilder {
 PRBool
 nsCSSStyleSheet::RebuildChildList(nsICSSRule* aRule, void* aBuilder)
 {
-  PRInt32 type;
-  aRule->GetType(type);
+  PRInt32 type = aRule->GetType();
   if (type < nsICSSRule::IMPORT_RULE) {
     // Keep going till we get to the import rules.
     return PR_TRUE;
@@ -914,11 +913,7 @@ nsCSSStyleSheetInner::RemoveSheet(nsCSSStyleSheet* aSheet)
 static void
 AddNamespaceRuleToMap(nsICSSRule* aRule, nsXMLNameSpaceMap* aMap)
 {
-#ifdef DEBUG
-  PRInt32 type;
-  aRule->GetType(type);
-  NS_ASSERTION(type == nsICSSRule::NAMESPACE_RULE, "Bogus rule type");
-#endif
+  NS_ASSERTION(aRule->GetType() == nsICSSRule::NAMESPACE_RULE, "Bogus rule type");
 
   nsCOMPtr<nsICSSNameSpaceRule> nameSpaceRule = do_QueryInterface(aRule);
   
@@ -933,8 +928,7 @@ AddNamespaceRuleToMap(nsICSSRule* aRule, nsXMLNameSpaceMap* aMap)
 static PRBool
 CreateNameSpace(nsICSSRule* aRule, void* aNameSpacePtr)
 {
-  PRInt32 type = nsICSSRule::UNKNOWN_RULE;
-  aRule->GetType(type);
+  PRInt32 type = aRule->GetType();
   if (nsICSSRule::NAMESPACE_RULE == type) {
     AddNamespaceRuleToMap(aRule,
                           static_cast<nsXMLNameSpaceMap*>(aNameSpacePtr));
@@ -1281,9 +1275,7 @@ nsCSSStyleSheet::PrependStyleRule(nsICSSRule* aRule)
     aRule->SetStyleSheet(this);
     DidDirty();
 
-    PRInt32 type = nsICSSRule::UNKNOWN_RULE;
-    aRule->GetType(type);
-    if (nsICSSRule::NAMESPACE_RULE == type) {
+    if (nsICSSRule::NAMESPACE_RULE == aRule->GetType()) {
       // no api to prepend a namespace (ugh), release old ones and re-create them all
       mInner->RebuildNameSpaces();
     }
@@ -1300,9 +1292,7 @@ nsCSSStyleSheet::AppendStyleRule(nsICSSRule* aRule)
     aRule->SetStyleSheet(this);
     DidDirty();
 
-    PRInt32 type = nsICSSRule::UNKNOWN_RULE;
-    aRule->GetType(type);
-    if (nsICSSRule::NAMESPACE_RULE == type) {
+    if (nsICSSRule::NAMESPACE_RULE == aRule->GetType()) {
       nsresult rv = RegisterNamespaceRule(aRule);
       NS_WARN_IF_FALSE(NS_SUCCEEDED(rv),
                        "RegisterNamespaceRule returned error");
@@ -1327,13 +1317,8 @@ nsCSSStyleSheet::ReplaceStyleRule(nsICSSRule* aOld, nsICSSRule* aNew)
     aNew->SetStyleSheet(this);
     aOld->SetStyleSheet(nsnull);
     DidDirty();
-#ifdef DEBUG
-    PRInt32 type = nsICSSRule::UNKNOWN_RULE;
-    aNew->GetType(type);
-    NS_ASSERTION(nsICSSRule::NAMESPACE_RULE != type, "not yet implemented");
-    aOld->GetType(type);
-    NS_ASSERTION(nsICSSRule::NAMESPACE_RULE != type, "not yet implemented");
-#endif
+    NS_ASSERTION(nsICSSRule::NAMESPACE_RULE != aNew->GetType(), "not yet implemented");
+    NS_ASSERTION(nsICSSRule::NAMESPACE_RULE != aOld->GetType(), "not yet implemented");
   }
 }
 
@@ -1748,19 +1733,17 @@ nsCSSStyleSheet::InsertRuleInternal(const nsAString& aRule,
   // Hierarchy checking.  Just check the first and last rule in the list.
   
   // check that we're not inserting before a charset rule
-  PRInt32 nextType = nsICSSRule::UNKNOWN_RULE;
   nsICSSRule* nextRule = mInner->mOrderedRules.SafeObjectAt(aIndex);
   if (nextRule) {
-    nextRule->GetType(nextType);
+    PRInt32 nextType = nextRule->GetType();
     if (nextType == nsICSSRule::CHARSET_RULE) {
       return NS_ERROR_DOM_HIERARCHY_REQUEST_ERR;
     }
 
     // check last rule in list
     nsICSSRule* lastRule = rules.ObjectAt(rulecount - 1);
-    PRInt32 lastType = nsICSSRule::UNKNOWN_RULE;
-    lastRule->GetType(lastType);
-    
+    PRInt32 lastType = lastRule->GetType();
+
     if (nextType == nsICSSRule::IMPORT_RULE &&
         lastType != nsICSSRule::CHARSET_RULE &&
         lastType != nsICSSRule::IMPORT_RULE) {
@@ -1777,16 +1760,14 @@ nsCSSStyleSheet::InsertRuleInternal(const nsAString& aRule,
   
   // check first rule in list
   nsICSSRule* firstRule = rules.ObjectAt(0);
-  PRInt32 firstType = nsICSSRule::UNKNOWN_RULE;
-  firstRule->GetType(firstType);
+  PRInt32 firstType = firstRule->GetType();
   if (aIndex != 0) {
     if (firstType == nsICSSRule::CHARSET_RULE) { // no inserting charset at nonzero position
       return NS_ERROR_DOM_HIERARCHY_REQUEST_ERR;
     }
   
     nsICSSRule* prevRule = mInner->mOrderedRules.SafeObjectAt(aIndex - 1);
-    PRInt32 prevType = nsICSSRule::UNKNOWN_RULE;
-    prevRule->GetType(prevType);
+    PRInt32 prevType = prevRule->GetType();
 
     if (firstType == nsICSSRule::IMPORT_RULE &&
         prevType != nsICSSRule::CHARSET_RULE &&
@@ -1809,9 +1790,8 @@ nsCSSStyleSheet::InsertRuleInternal(const nsAString& aRule,
   for (PRInt32 counter = 0; counter < rulecount; counter++) {
     nsICSSRule* cssRule = rules.ObjectAt(counter);
     cssRule->SetStyleSheet(this);
-    
-    PRInt32 type = nsICSSRule::UNKNOWN_RULE;
-    cssRule->GetType(type);
+
+    PRInt32 type = cssRule->GetType();
     if (type == nsICSSRule::NAMESPACE_RULE) {
       // XXXbz does this screw up when inserting a namespace rule before
       // another namespace rule that binds the same prefix to a different
@@ -1894,8 +1874,7 @@ nsCSSStyleSheet::DeleteRuleFromGroup(nsICSSGroupRule* aGroup, PRUint32 aIndex)
   NS_ENSURE_SUCCESS(result, result);
   
   // check that the rule actually belongs to this sheet!
-  nsCOMPtr<nsIStyleSheet> ruleSheet;
-  rule->GetStyleSheet(*getter_AddRefs(ruleSheet));
+  nsCOMPtr<nsIStyleSheet> ruleSheet = rule->GetStyleSheet();
   if (this != ruleSheet) {
     return NS_ERROR_INVALID_ARG;
   }
@@ -1928,8 +1907,7 @@ nsCSSStyleSheet::InsertRuleIntoGroup(const nsAString & aRule,
   nsresult result;
   NS_ASSERTION(mInner->mComplete, "No inserting into an incomplete sheet!");
   // check that the group actually belongs to this sheet!
-  nsCOMPtr<nsIStyleSheet> groupSheet;
-  aGroup->GetStyleSheet(*getter_AddRefs(groupSheet));
+  nsCOMPtr<nsIStyleSheet> groupSheet = aGroup->GetStyleSheet();
   if (this != groupSheet) {
     return NS_ERROR_INVALID_ARG;
   }
@@ -1973,10 +1951,8 @@ nsCSSStyleSheet::InsertRuleIntoGroup(const nsAString & aRule,
   nsICSSRule* rule;
   for (counter = 0; counter < rulecount; counter++) {
     // Only rulesets are allowed in a group as of CSS2
-    PRInt32 type = nsICSSRule::UNKNOWN_RULE;
     rule = rules.ObjectAt(counter);
-    rule->GetType(type);
-    if (type != nsICSSRule::STYLE_RULE) {
+    if (rule->GetType() != nsICSSRule::STYLE_RULE) {
       return NS_ERROR_DOM_HIERARCHY_REQUEST_ERR;
     }
   }
@@ -2004,8 +1980,7 @@ nsCSSStyleSheet::ReplaceRuleInGroup(nsICSSGroupRule* aGroup,
   NS_PRECONDITION(mInner->mComplete, "No replacing in an incomplete sheet!");
 #ifdef DEBUG
   {
-    nsCOMPtr<nsIStyleSheet> groupSheet;
-    aGroup->GetStyleSheet(*getter_AddRefs(groupSheet));
+    nsCOMPtr<nsIStyleSheet> groupSheet = aGroup->GetStyleSheet();
     NS_ASSERTION(this == groupSheet, "group doesn't belong to this sheet");
   }
 #endif
